2009-06-08  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/check-hildon-controlbar.c: (test_set_range_invalid):
	Comment out test 5, since the hildon_controlbar_set_range() range
	check is broken and fixing it would have side effects. Also,
	this finally fixes make distcheck.

	Fixes: NB#101420 (Update unit tests and fix make distcheck)

2009-06-18  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/TEST-CASES.txt: Remove other bogus test.
	* tests/check-hildon-controlbar.c: (test_set_value_invalid):
	Remove bogus test that was setting/retrieving a valid value.

2009-06-08  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/TEST-CASES.txt: Remove bogus tests.
	* tests/check-hildon-color-chooser.c: (test_set_color_invalid):
	Remove three bogus tests that were actually setting valid colors.

2009-06-08  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: post release version bump

2009-06-08  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.80]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-06-08  Christian Dywan  <christian@lanedo.com>

	* debian/changelog:
	* debian/control:
	* hildon/hildon-helper.c (hildon_format_file_size_for_display):
	Correct errors in hildon_format_file-size_for_display and use
	translations from the hildon-fm package instead of osso-filemanager.

2009-06-08  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_init): Initialized new values to handle the
	adjustment position.
	(hildon_pannable_area_adjust_value_changed): Check if the values
	changed before even call the redraw function.
	(hildon_pannable_area_size_allocate),
	(hildon_pannable_axis_scroll),
	(hildon_pannable_area_scroll),
	(hildon_pannable_area_jump_to): Improved the diagonal movement
	case.

	Fixes: NB#113065 (Image viewer image scrolling updates in X, then
	Y)

2009-06-08  Alberto Garcia  <agarcia@igalia.com>
